<resources>
    <string name="app_name">Toko Ika</string>
    <string name="conten_text">Bedak baby Jhonson</string>
    <string name="content_specs_display">1000gr</string>
    <string name="_6_photos">6 Photos</string>
    <string name="rp_25_000_00">Rp.25.000.00</string>
    <string name="deskripsi">Deskripsi :</string>
    <string name="gunakan_bedak_ketika_kulit_dalam_kondisi_kering_salah_satu_kegunaan_bedak_bayi_johnson_s_adalah_mampu_menyerap_keringat_bayi_dengan_baik_terutama_ketika_mereka_sedang_beraktivitas_jadi_pastikan_bunda_memakaikan_bedak_bayi_johnson_s_setiap_kali_si_kecil_habis_mandi_saat_tubuhnya_sudah_dikeringkan_dengan_handuk">Gunakan bedak ketika kulit dalam kondisi kering. Salah satu kegunaan bedak bayi Johnson\'s adalah mampu menyerap keringat bayi dengan baik, terutama ketika mereka sedang beraktivitas. Jadi, pastikan Bunda memakaikan bedak bayi Johnson\'s setiap kali si kecil habis mandi, saat tubuhnya sudah dikeringkan dengan handuk</string>
    <string name="todo">TODO</string>
    <string name="desk">Gunakan bedak ketika kulit dalam kondisi kering. Salah satu kegunaan bedak bayi Johnson\'s adalah mampu menyerap keringat bayi dengan baik, terutama ketika mereka sedang beraktivitas. Jadi, pastikan Bunda memakaikan bedak bayi Johnson\'s setiap kali si kecil habis mandi, saat tubuhnya sudah dikeringkan dengan handuk.</string>
</resources>